@@ -1,11 +1,10 @@
-package dev.lbuddyboy.samurai.map.leaderboard;
+package dev.lbuddyboy.legend.features.leaderboard;
 
-import dev.lbuddyboy.samurai.Samurai;
-import dev.lbuddyboy.samurai.map.leaderboard.impl.KillLeaderBoardStat;
+import dev.lbuddyboy.legend.LegendBukkit;
+import dev.lbuddyboy.legend.features.leaderboard.impl.KillLeaderBoardStat;
 import lombok.Data;
 import org.bukkit.Location;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Data
@@ -14,15 +13,15 @@ public class RotatingHologram {
     private LeaderBoardHologram leaderBoardHologram;
 
     public RotatingHologram(Location location) {
-        this.leaderBoardHologram = new LeaderBoardHologram(Samurai.getInstance().getLeaderBoardHandler().getStatByClass(KillLeaderBoardStat.class).get(), location);
+        this.leaderBoardHologram = new LeaderBoardHologram(LegendBukkit.getInstance().getLeaderBoardHandler().getStatByClass(KillLeaderBoardStat.class), location);
         this.leaderBoardHologram.spawn();
     }
 
     public void rotate() {
-        List<ILeaderBoardStat> stats = Samurai.getInstance().getLeaderBoardHandler().getLeaderBoardStats();
+        List<ILeaderBoardStat> stats = LegendBukkit.getInstance().getLeaderBoardHandler().getLeaderBoardStats();
         int size = stats.size();
         int currentIndex = stats.indexOf(this.leaderBoardHologram.getType());
-        this.leaderBoardHologram.setType(currentIndex + 1 >= size ? stats.getFirst() : stats.get(++currentIndex));
+        this.leaderBoardHologram.setType(currentIndex + 1 >= size ? stats.get(0) : stats.get(++currentIndex));
         leaderBoardHologram.update();
     }
 
